@@ -197,10 +197,10 @@ UnixSystem::translate_filename (const std::string& filename)
     }
   else if (has_prefix(filename, "/user/"))
     {
-      return "/home/ingo/.construo/" + filename.substr(6); 
+      return construo_rc_path + filename.substr(6);
     }
   else if (has_prefix(filename, "/examples/"))
-    {
+    { // FIXME: No handling of the installation directory!
       return "examples/" + filename.substr(10); 
     }
   else
@@ -222,6 +222,8 @@ UnixSystem::open_output_file(const std::string& filename)
 }
 
 
+/** Sort directories before files and sort them all
+    alphabetically */
 struct DirectorySorter
 {
   std::string pathname;
@@ -269,20 +271,29 @@ UnixSystem::read_directory(const std::string& arg_pathname)
       std::string pathname = translate_filename (arg_pathname);
 
       DIR* dir = ::opendir (pathname.c_str());
-      // FIXME: Error checking here
-      struct dirent* entry;
-
-      while ((entry = readdir(dir)) != 0)
+      
+      if (!dir)
         {
-          if (strcmp(entry->d_name, ".") != 0
-              && strcmp(entry->d_name, "..") != 0
-              && strcmp(entry->d_name, "CVS") != 0)
-            { // We ignore unusefull directories
-              dir_lst.push_back(entry->d_name);
-            }
+          std::cout << "UnixSystem: Error couldn't open: '" << pathname << "', ignoring\n"
+                    << "            error and continuing with an empty directory" << std::endl;
         }
+      else
+        {
+          // FIXME: Error checking here
+          struct dirent* entry;
+
+          while ((entry = readdir(dir)) != 0)
+            {
+              if (strcmp(entry->d_name, ".") != 0
+                  && strcmp(entry->d_name, "..") != 0
+                  && strcmp(entry->d_name, "CVS") != 0)
+                { // We ignore unusefull directories
+                  dir_lst.push_back(entry->d_name);
+                }
+            }
   
-      closedir (dir);
+          closedir (dir);
+        }
 
       std::sort(dir_lst.begin(), dir_lst.end(), DirectorySorter(pathname));
 
