@@ -1,6 +1,8 @@
 Construo 0.2.1
 ==============
 
+ * fixes crash-bug in with user/ directory
+
  * added missing set-velocity and clear key event for glut
 
  * fixed missing #ifdef/#endif for XVidMode, caused compile failure if
